--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <hr>
 
         <p class="my-4">
-            Vendedora en Demarka con 8 años en la empresa, estudiante en desafio latam: curso desarrollo fullstack
+            Vendedora en Demarka con 8 años en la empresa, estudiante en desafio latam: curso desarrollo fullstack.
         </p>
 
         <div class="row">
