--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                     corporis facilis qui architecto dolor, accusamus eveniet
                                     exercitationem fugit. Quod autem neque ducimus.
                                 </p>
-                                <type="button" class="btn btn-outline-info">Ver más</a>
+                                <a href="https://kathydilinger.github.io/Mi_CV/" type="button" class="btn btn-outline-info">Ver más</a>
                                 </button>
                             </div>
                 </div>
